--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         <div class="drawer-auth" id="drawer-auth"></div>
 
         <nav class="drawer-nav">
-            <a href="zion.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">⛪</div>Zion Lisboa</a>
-            <a href="ministerios.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🎵</div>Ministérios</a>
-            <a href="links.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🔗</div>Links</a>
-            <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">📍</div>Localização</a>
-            <a href="keola.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">☕</div>Keola</a>
-            <a href="zao.html"         class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">📚</div>ZAO</a>
-            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💬</div>Chat Assistente</a>
-            <a href="membros.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">👥</div>Membros</a>
-            <a href="visitantes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🙋</div>Visitantes</a>
-            <a href="dizimos.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💰</div>Dízimos</a>
-            <a href="salas.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🏠</div>Salas</a>
-            <a href="aprovacoes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">✅</div>Aprovação</a>
-            <a href="admin.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">⚙️</div>Cadastros</a>
+            <a href="zion.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Zion Lisboa</a>
+            <a href="ministerios.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Ministérios</a>
+            <a href="links.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Links</a>
+            <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Localização</a>
+            <a href="keola.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Keola</a>
+            <a href="zao.html"         class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>ZAO</a>
+            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Chat Assistente</a>
+            <a href="membros.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Membros</a>
+            <a href="visitantes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Visitantes</a>
+            <a href="dizimos.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Dízimos</a>
+            <a href="salas.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Salas</a>
+            <a href="aprovacoes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Aprovação</a>
+            <a href="admin.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">️</div>Cadastros</a>
         </nav>
         <div class="drawer-footer">
             <div class="drawer-footer-links">
@@ -86,23 +86,23 @@
         <p class="section-label">O que procuras?</p>
         <div class="grid">
             <a href="zion.html" class="btn-icon">
-                <div class="icon-wrap ic-gold">⛪</div>
+                <div class="icon-wrap ic-gold"></div>
                 <span class="label">Zion</span>
             </a>
             <a href="links.html" class="btn-icon">
-                <div class="icon-wrap ic-blue">🔗</div>
+                <div class="icon-wrap ic-blue"></div>
                 <span class="label">Links</span>
             </a>
             <a href="localizacao.html" class="btn-icon">
-                <div class="icon-wrap ic-red">📍</div>
+                <div class="icon-wrap ic-red"></div>
                 <span class="label">Localização</span>
             </a>
             <a href="https://www.bibliaonline.com.br" target="_blank" class="btn-icon">
-                <div class="icon-wrap ic-red">📖</div>
+                <div class="icon-wrap ic-red"></div>
                 <span class="label">Bíblia</span>
             </a>
             <a href="chat.html" class="btn-icon btn-icon--wide">
-                <div class="icon-wrap ic-gold">💬</div>
+                <div class="icon-wrap ic-gold"></div>
                 <span class="label">Chat<br>Assistente Virtual Zion Lisboa</span>
             </a>
         </div>
@@ -139,6 +139,37 @@
         document.getElementById('hamburger').classList.remove('open');
     }
     document.addEventListener('keydown', e => { if (e.key === 'Escape') closeDrawer(); });
+
+    /* === BOTÕES GRID === */
+    document.querySelectorAll(".btn-icon").forEach(btn => {
+        const label = btn.querySelector(".label").innerText
+            .replace(/\n/g, " ")
+            .trim();
+
+        const words = label.split(" ").filter(w => w.length > 2); // ignora "de", "da", etc.
+
+        let initials = "";
+
+        if (words.length === 1) {
+            initials = words[0].substring(0,2);
+        } else {
+            initials = words[0][0] + words[1][0];
+        }
+
+        btn.querySelector(".icon-wrap").textContent = initials.toUpperCase();
+    });
+
+    document.querySelectorAll(".drawer-item").forEach(item => {
+        const text = item.childNodes[2].textContent.trim();
+        const words = text.split(" ");
+
+        let initials = words[0][0];
+        if (words.length > 1) {
+            initials += words[1][0];
+        }
+
+        item.querySelector(".drawer-icon").textContent = initials.toUpperCase();
+    });
 
     // ── AUTH ────────────────────────────────────────────────────
     function renderAuth() {
