--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     <!-- MAIN -->
     <div class="main-content">
         <div class="welcome-card">
-            <div class="cross-icon">✝️</div>
+            <div class="cross-icon">
+                <img src="assets/logo_zion.png" alt="Logo Zion Lisboa">
+            </div>
             <p><strong>Bem-vindo à Zion Lisboa</strong><br>
                 Seleciona uma área abaixo para saber mais sobre a nossa comunidade.</p>
         </div>
@@ -146,7 +148,7 @@
             .replace(/\n/g, " ")
             .trim();
 
-        const words = label.split(" ").filter(w => w.length > 2); // ignora "de", "da", etc.
+        const words = label.split(" ").filter(w => w.length > 2);
 
         let initials = "";
 
