--- a/admin.html
+++ b/admin.html
@@ -15,14 +15,17 @@
 <body>
 <div class="page-wrapper">
     <div class="banner">
-        <img src="banner%20zion.jpg" alt="Zion Lisboa" onerror="this.onerror=null;this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">        
+        <img src="banner%20zion.jpg" alt="Zion Lisboa" onerror="this.onerror=null;this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">
         <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
-        
+
     </div>
     <div class="gold-line"></div>
     <div class="user-bar">
         <a href="index.html" class="user-bar-back">&#8592; Inicio</a>
         <div class="user-bar-center">
+            <div class="cross-icon">
+                <img src="assets/logo_zion.png" alt="Logo Zion Lisboa">
+            </div>
             <div class="user-bar-section" id="secao-label">Cadastros</div>
             <div class="user-bar-date" id="data-hoje"></div>
         </div>
