--- a/admin.html
+++ b/admin.html
@@ -23,8 +23,12 @@
     <div class="user-bar">
         <a href="index.html" class="user-bar-back">&#8592; Inicio</a>
         <div class="user-bar-center">
-            <div class="cross-icon">
-                <img src="assets/logo_zion.png" alt="Logo Zion Lisboa">
+            <div class="welcome-card">
+                <div class="cross-icon">
+                    <img src="assets/logo_zion.png" alt="Logo Zion Lisboa">
+                </div>
+                <p><strong>Bem-vindo à Zion Lisboa</strong><br>
+                    Seleciona uma área abaixo para saber mais sobre a nossa comunidade.</p>
             </div>
             <div class="user-bar-section" id="secao-label">Cadastros</div>
             <div class="user-bar-date" id="data-hoje"></div>
