--- a/admin.html
+++ b/admin.html
@@ -20,16 +20,15 @@
 
     </div>
     <div class="gold-line"></div>
+    <div class="welcome-card">
+        <div class="cross-icon">
+            <img src="assets/logo_zion.png" alt="Logo Zion Lisboa">
+        </div>
+        <p><strong>Bem-vindo à Zion Lisboa</strong><br></p>
+    </div>
     <div class="user-bar">
         <a href="index.html" class="user-bar-back">&#8592; Inicio</a>
         <div class="user-bar-center">
-            <div class="welcome-card">
-                <div class="cross-icon">
-                    <img src="assets/logo_zion.png" alt="Logo Zion Lisboa">
-                </div>
-                <p><strong>Bem-vindo à Zion Lisboa</strong><br>
-                    Seleciona uma área abaixo para saber mais sobre a nossa comunidade.</p>
-            </div>
             <div class="user-bar-section" id="secao-label">Cadastros</div>
             <div class="user-bar-date" id="data-hoje"></div>
         </div>
