--- a/zion.html
+++ b/zion.html
@@ -5,65 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Zion — Zion Church Lisboa</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --gold: #B8922A; --gold-light: #D4A843; --gold-dark: #8B6914;
-            --border: rgba(184,146,42,0.22);
-            --bg-page: #F5EFE4; --bg-card: #FFFFFF; --bg-input: #FAF7F2;
-            --bg-footer: #F0E8D8; --bg-bot: #F9F5EE;
-            --text-main: #1A1410; --text-muted: #7A6A52; --text-faint: #A89878;
-            --shadow: 0 8px 40px rgba(100,70,20,0.13);
-        }
-        *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
-        html, body { height: 100%; background: var(--bg-page); font-family: 'Lato', sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; }
-        body::before { content: ''; position: fixed; inset: 0; background: radial-gradient(ellipse at 15% 15%, rgba(201,168,76,0.09) 0%, transparent 55%), radial-gradient(ellipse at 85% 85%, rgba(201,168,76,0.06) 0%, transparent 55%); pointer-events: none; }
-        .page-wrapper { position: relative; z-index: 1; display: flex; flex-direction: column; width: 640px; max-width: 96vw; height: 96vh; max-height: 900px; background: var(--bg-card); border-radius: 16px; box-shadow: var(--shadow), 0 0 0 1px var(--border); overflow: hidden; }
-        /* Banner */
-        .banner { width: 100%; position: relative; background: #111; flex-shrink: 0; }
-        .banner img { width: 100%; height: 120px; object-fit: cover; display: block; }
-        .banner-fallback { display: none; width: 100%; height: 120px; background: linear-gradient(135deg, #0d0d0d 0%, #1c1408 50%, #0d0d0d 100%); align-items: center; justify-content: center; flex-direction: column; gap: 8px; }
-        .banner-fallback.show { display: flex; }
-        .banner-title { font-family: 'Cinzel', serif; color: #C9A84C; font-size: 28px; font-weight: 700; letter-spacing: 10px; }
-        .banner-sub { color: rgba(201,168,76,0.6); font-size: 10px; letter-spacing: 4px; text-transform: uppercase; }
-        .banner-overlay { position: absolute; bottom: 0; left: 0; right: 0; height: 60px; background: linear-gradient(to top, rgba(255,255,255,0.95), transparent); }
-        .banner-nav { position: absolute; bottom: 10px; left: 0; right: 0; display: flex; align-items: center; justify-content: space-between; padding: 0 16px; }
-        .back-btn { display: flex; align-items: center; gap: 6px; background: rgba(255,255,255,0.92); border: 1px solid var(--border); border-radius: 20px; padding: 5px 14px; font-family: 'Cinzel', serif; font-size: 10px; letter-spacing: 1.5px; color: var(--gold-dark); text-decoration: none; backdrop-filter: blur(8px); box-shadow: 0 2px 8px rgba(0,0,0,0.08); transition: all 0.2s; }
-        .back-btn:hover { background: #fff; border-color: var(--gold-light); }
-        .page-badge { font-family: 'Cinzel', serif; font-size: 10px; letter-spacing: 2px; color: var(--gold); text-transform: uppercase; background: rgba(255,255,255,0.92); border: 1px solid var(--border); border-radius: 20px; padding: 5px 14px; backdrop-filter: blur(8px); }
-        .gold-line { height: 2px; background: linear-gradient(90deg, transparent, var(--gold-light), transparent); flex-shrink: 0; opacity: 0.5; }
-        /* Content */
-        .content { flex: 1; overflow-y: auto; padding: 20px 18px 20px; background: var(--bg-input); }
-        .content::-webkit-scrollbar { width: 4px; }
-        .content::-webkit-scrollbar-thumb { background: rgba(184,146,42,0.25); border-radius: 2px; }
-        /* Cards */
-        .card { background: var(--bg-card); border: 1px solid var(--border); border-radius: 12px; padding: 18px; margin-bottom: 12px; box-shadow: 0 2px 8px rgba(100,70,20,0.05); animation: fadeUp 0.4s ease both; }
-        .card--highlight { background: linear-gradient(135deg, rgba(201,168,76,0.08), rgba(201,168,76,0.02)); border-color: rgba(184,146,42,0.35); }
-        .card-badge { display: inline-block; padding: 2px 10px; border-radius: 20px; background: rgba(184,146,42,0.1); border: 1px solid var(--border); font-family: 'Cinzel', serif; font-size: 9px; letter-spacing: 1.5px; text-transform: uppercase; color: var(--gold); margin-bottom: 10px; }
-        .card-title { font-family: 'Cinzel', serif; font-size: 17px; font-weight: 600; color: var(--gold-dark); margin-bottom: 8px; }
-        .card-text { font-size: 14px; color: var(--text-muted); line-height: 1.75; }
-        .card-ref { font-style: italic; font-size: 11px; color: var(--text-faint); margin-top: 8px; display: block; }
-        .card-verse { text-align: center; padding: 20px; }
-        .card-verse-text { font-family: 'Cinzel', serif; font-style: italic; font-size: 16px; color: var(--gold-dark); line-height: 1.6; margin-bottom: 8px; }
-        .card-verse-ref { font-size: 11px; color: var(--text-faint); letter-spacing: 2px; text-transform: uppercase; }
-        .section-label { font-family: 'Cinzel', serif; font-size: 10px; letter-spacing: 3px; text-transform: uppercase; color: var(--text-faint); margin: 18px 0 10px; }
-        /* Footer */
-        .footer { background: var(--bg-footer); border-top: 1px solid var(--border); padding: 10px 18px; flex-shrink: 0; }
-        .footer-links { display: flex; justify-content: center; gap: 12px; margin-bottom: 8px; }
-        .footer-link { display: flex; align-items: center; gap: 5px; color: var(--gold); text-decoration: none; font-size: 10px; letter-spacing: 1.2px; text-transform: uppercase; font-family: 'Cinzel', serif; padding: 4px 10px; border-radius: 4px; border: 1px solid var(--border); background: rgba(255,255,255,0.6); transition: all 0.2s; }
-        .footer-link:hover { background: rgba(255,255,255,0.95); border-color: var(--gold-light); }
-        .footer-link svg { width: 12px; height: 12px; }
-        .footer-divider { height: 1px; background: var(--border); margin: 8px 0; }
-        .footer-bottom { display: flex; flex-direction: column; align-items: center; gap: 2px; }
-        .footer-copy { color: var(--text-muted); font-size: 10px; letter-spacing: 1px; text-transform: uppercase; font-family: 'Cinzel', serif; text-align: center; }
-        .footer-address { color: var(--text-faint); font-size: 10px; text-align: center; }
-        @keyframes fadeUp { from { opacity: 0; transform: translateY(12px); } to { opacity: 1; transform: translateY(0); } }
-        .d1{animation-delay:0.05s} .d2{animation-delay:0.10s} .d3{animation-delay:0.15s} .d4{animation-delay:0.20s} .d5{animation-delay:0.25s} .d6{animation-delay:0.30s} .d7{animation-delay:0.35s}
-    </style>
+    <link rel="stylesheet" href="css/tokens.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
+    <script src="config.js"></script>
+
 </head>
 <body>
 <div class="page-wrapper">
     <div class="banner">
-        <img src="banner zion.jpg" alt="Zion Lisboa" onerror="this.style.display='none'; document.querySelector('.banner-fallback').classList.add('show');">
+        <img src="assets/banner_zion.jpg" alt="Zion Lisboa" onerror="this.style.display='none'; document.querySelector('.banner-fallback').classList.add('show');">
         <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
         <div class="banner-overlay"></div>
         <div class="banner-nav">
