--- a/keola.html
+++ b/keola.html
@@ -204,18 +204,19 @@
     function p(v) { return Number(v).toFixed(2) + '€'; }
 
     function render(items) {
-        // Especial do dia
-        const esp = items.find(i => i.especial_hoje && i.disponivel);
-        document.getElementById('especial-section').innerHTML = esp ? `
+        // Especial do dia — todos os itens com especial_hoje = true
+        const esps = items.filter(i => i.especial_hoje && i.disponivel);
+        document.getElementById('especial-section').innerHTML = esps.length ? `
             <p class="section-label">⭐ Especial do Dia</p>
             <div class="card card--especial d1">
+                ${esps.map(esp => `
                 <div class="menu-row">
                     <div>
                         <div class="menu-name">${esp.nome}</div>
                         ${esp.descricao ? `<div class="menu-desc">${esp.descricao}</div>` : ''}
                     </div>
                     <div class="menu-price">${p(esp.preco)}</div>
-                </div>
+                </div>`).join('')}
             </div>` : '';
 
         // Menu por categoria
