--- a/ministerios.html
+++ b/ministerios.html
@@ -189,7 +189,7 @@ async function init() {
     try {
         const [ministerios, configs] = await Promise.all([
             // Filtra só tipo=ministerio, ativos, ordenados por created_at
-            sb('links?select=*&ativo=eq.true&tipo=eq.ministerio&order=created_at.asc'),
+            sb('ministerios?select=*&ativo=eq.true&tipo=eq.ministerio&order=created_at.asc'),
             sb('configuracoes?select=chave,valor'),
         ]);
 
